--- a/Support/Support.API/Support.API.csproj
+++ b/Support/Support.API/Support.API.csproj
@@ -7,13 +7,8 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="7.0.4" />
-    <PackageReference Include="Swashbuckle.AspNetCore" Version="6.4.0" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <ProjectReference Include="..\..\Support\Support.Infrastructure\Support.Infrastructure.csproj" />
     <ProjectReference Include="..\Support.Core\Support.Core.csproj" />
+    <ProjectReference Include="..\Support.Infrastructure\Support.Infrastructure.csproj" />
   </ItemGroup>
 
 </Project>
