--- a/Product/Product.API/Properties/launchSettings.json
+++ b/Product/Product.API/Properties/launchSettings.json
@@ -12,7 +12,7 @@
     "Product.API": {                                    // Name Should Be Service Name 
       "commandName": "Project",
       "dotnetRunMessages": true,
-      "launchBrowser": false,
+      "launchBrowser": true,
       "applicationUrl": "http://localhost:5003",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
