--- a/Order/Order.API/Properties/launchSettings.json
+++ b/Order/Order.API/Properties/launchSettings.json
@@ -12,7 +12,7 @@
     "Order.API": {                                     // Name Should Be Service Name 
       "commandName": "Project",
       "dotnetRunMessages": true,
-      "launchBrowser": false,
+      "launchBrowser": true,
       "applicationUrl": "http://localhost:5001",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
