--- a/Order/Order.API/appsettings.json
+++ b/Order/Order.API/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=.\\SQLEXPRESS;Database=Orders;Trusted_Connection=True;TrustServerCertificate=True;MultipleActiveResultSets=true"
+    "DefaultConnection": "Server=.\\SQLEXPRESS;Database=Orders;User Id=sa; Password=triveni@123; Persist Security Info=True;MultipleActiveResultSets=True;App=EntityFramework;Trusted_Connection=True;TrustServerCertificate=True;"
   },
   "Logging": {
     "LogLevel": {
