implemented SingIn_SignUp and authentication feature

--- a/Product/Product.API/appsettings.json
+++ b/Product/Product.API/appsettings.json
@@ -6,7 +6,7 @@
     }
   },
   "ConnectionStrings": {
-    "DefaultConnection": "Server=.;Database=Product;Trusted_Connection=True;TrustServerCertificate=True;MultipleActiveResultSets=true"
+    "DefaultConnection": "Server=.;Database=ProductDB;Trusted_Connection=True;TrustServerCertificate=True;MultipleActiveResultSets=true"
   },
   "AllowedHosts": "*"
 }
