--- a/User/User.API/Properties/launchSettings.json
+++ b/User/User.API/Properties/launchSettings.json
@@ -12,7 +12,7 @@
     "User.API": {
       "commandName": "Project",
       "dotnetRunMessages": true,
-      "launchBrowser": true,
+      "launchBrowser": false,
       "applicationUrl": "http://localhost:5005",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
