--- a/User/User.API/appsettings.json
+++ b/User/User.API/appsettings.json
@@ -9,7 +9,7 @@
     }
   },
   "ConnectionStrings": {
-    "DefaultConnection": "Server=.\\SQLEXPRESS;Database=UserDB;Trusted_Connection=True;TrustServerCertificate=True;MultipleActiveResultSets=true"
+    "DefaultConnection": "Server=.\\SQLEXPRESS;Database=User;Trusted_Connection=True;TrustServerCertificate=True;MultipleActiveResultSets=true"
   },
   "AllowedHosts": "*"
 }
