--- a/User/User.API/User.API.csproj
+++ b/User/User.API/User.API.csproj
@@ -10,6 +10,7 @@
 	  <PackageReference Include="FluentValidation.AspNetCore" Version="11.3.0" />
 	  <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="7.0.5" />
 	  <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="7.0.5" />
+	  <PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
 	  <PackageReference Include="Swashbuckle.AspNetCore" Version="6.5.0" />
 	  <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="7.0.5">
 		  <PrivateAssets>all</PrivateAssets>
