--- a/Order/Order.Core/Order.Core.csproj
+++ b/Order/Order.Core/Order.Core.csproj
@@ -10,4 +10,8 @@
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="7.0.5" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\..\Product\Product.API\Product.API.csproj" />
+  </ItemGroup>
+
 </Project>
